# cgi_tree

./: CMakeLists.txt  main.cpp
cgi/: cgi.cpp  cgi.h
data/: data
list/: list.h
localhost/: form.cgi  form.html  index.html  reviews.cgi  reviews.html  tree.cgi  tree.html  tree_ex.html
localhost/css/: style.css
localhost/data/: comments.data  data
queue/: queue.h
tree/: tree.h
